
	* bookmark.el (Info-suffix-list): Remove this unused variable.
	(bookmark-current-point): Remove this obsolete variable.
	(bookmark-set, bookmark-rename, bookmark-send-edited-annotation):
	Adjust for removal of bookmark-current-point.

	(bookmarks-already-loaded, bookmark-current-buffer)
	(bookmark-yank-point): Document.  (Bug#4188)

2009-10-10  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-split-width-threshold): New option.
	(calendar-basic-setup): Use calendar-split-width-threshold.

2009-10-10  Sascha Wilde <wilde@sha-bang.de>

	* cedet/ede/proj-shared.el (ede-proj-makefile-target-name): Use
	.la for Automake.

2009-10-09  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/ede/pconf.el (ede-proj-configure-synchronize): Use
	"autoreconf -i".  Suggested by Andreas Schwab.

2009-10-09  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-cmds.el (ucs-names): Exclude new "Enclosed
	Ideographic Supplement" range (U+1F200..U+1F2FF).

2009-10-09  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-bmenu-rename): Don't call bookmark-bmenu-list,
	since the list will have been rebuilt anyway.  (Bug#4349)

2009-10-09  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-delete): Don't let batch arg prevent saving.
	(bookmark-bmenu-execute-deletions): Don't save here, as
	bookmark-delete will now do so if necessary.
	Suggested by Thierry Volpiatto <thierry.volpiatto {_AT_} gmail.com>.
	(Bug#4348)

2009-10-09  Glenn Morris  <rgm@gnu.org>

	* mail/emacsbug.el (report-emacs-bug): Also print `features'.

2009-10-09  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-jump): Add new `display-func' parameter.
	(bookmark-jump-other-window): Just invoke bookmark-jump with new
	argument now, so the two function's behaviors will match.  (Bug#3645)

2009-10-08  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/ede/proj.el (project-make-dist, project-compile-project):
	Fix filename test.